Update page title and fix a css spacing

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -15,7 +15,7 @@ section {
   color: #dddddd;
   background-color: #333333;
   border: 2px solid #ff5100;
-  height: calc(100vh - 22px);
+  height: calc(100vh - 24px);
   padding: 10px;
 }
 
